--- a/GameBattle/css/style.css
+++ b/GameBattle/css/style.css
@@ -5,8 +5,7 @@ body{
     text-align: center;
 }
 #container{
-    width: 80%;
-    /*height: 600px;*/
+    width: 99%;
     margin: 0 auto;
     border: 1px solid;
     padding: 7px;
@@ -15,31 +14,19 @@ body{
 
 #header{
     border: 1px solid;
-    height: 150px;
+    height: 130px;
     margin: 7px 3px;
     background-size: 50px 50px;
 }
-/*#player1{
-    border: 1px solid;
-    width: 49%;
-    height: 200px;
-    float: left;
-    margin: 7px 3px;
-}*/
+
 #game{
     border: 1px solid;
     width: 99%;
     float: left;
     margin: 7px 3px;
+    text-align: center;
 }
-/*#player2{
-    border: 1px solid;
-    width: 49%;
-    height: 200px;
-    float: left;
-    margin: 7px 3px;
-    background-size: 100px 150px;
-}*/
+
 #main{
     margin: 5px 5%;
     background-size: 100px 150px;
@@ -57,24 +44,25 @@ input,label{
     margin: 5px 3px;
 }
 #field{
-    display: none;
-    /*float: left;*/
-    margin:30xp;
+    float: left;
+    margin:30px !important;
+    text-align: center !important;
 }
-/*UI*/
+
 div.container{
-    margin:30xp;
     border: 1px solid black;
+    float: left;
+    margin-right: 30px;
 }
 div.cell {
     border: 2px solid black;
-    /* background: #fc0; */
     height: 30px;
     width: 30px;
     float: left;
     margin: 2px;
     display: inline-block;
     cursor: pointer;
+    background: orange;
 }
 div.hit{
     background: green;
@@ -82,3 +70,14 @@ div.hit{
 div.kill{
     background: black !important;
 }
+.results{
+    float: left;
+}
+#player0{
+    display: none;
+}
+#player1{
+    display: none;
+
+}
+
